<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.calculadoradeareas.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="20dp"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/ecuadro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuadro"

            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ecirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/etriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ecubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cubo"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lado1"
                android:textSize="14sp"
                android:id="@+id/etext"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:id="@+id/elado1"
                android:inputType="numberDecimal"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lado2"
                android:textSize="14sp"
                android:id="@+id/etext2"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/elado2"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lado3"
                android:textSize="14sp"
                android:id="@+id/etext3"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:id="@+id/elado3"
                android:inputType="numberDecimal"
                android:textColor="@color/black"/>
        </LinearLayout>



    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/calcular"
            android:id="@+id/calcular"
            android:background="@color/aquamarine"
            />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:layout_margin="5dp"
        android:gravity="center" >
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/etext4"
            android:text="@string/area"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/limegreen"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/res1"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/etext5"
            android:textColor="@color/limegreen"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/res2"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:textColor="@color/black"/>

</LinearLayout>
</LinearLayout>
</LinearLayout>